--- a/docs/tweets-2021-03.md
+++ b/docs/tweets-2021-03.md
@@ -1,29 +1,6 @@
-# List of tweets
+# Mar 2021
 
-By month:
-
-[March](./tweets-2021-03)
-
-
-
-## Aprile 2021
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Abbreviations are always bad?<br>&#39;db&#39; is Database or Decibel?<br><br>It depends on the context: <br><br>📑 CRUD repo? Database.<br>🎵 Decibel2Watt calculator? Decibel.<br><br>Feel free to abbreviate terms if they are easy to infer!<br><br>Avoid mental mapping, unless they are obvious.<a href="https://twitter.com/hashtag/codingtip?src=hash&amp;ref_src=twsrc%5Etfw">#codingtip</a> <a href="https://twitter.com/hashtag/cleancode?src=hash&amp;ref_src=twsrc%5Etfw">#cleancode</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1381668443259305989?ref_src=twsrc%5Etfw">April 12, 2021</a></blockquote> 
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Are you a <a href="https://twitter.com/hashtag/codenewbie?src=hash&amp;ref_src=twsrc%5Etfw">#codenewbie</a> looking for a new job?<br><br>My 2 cents:<br><br>❌ don&#39;t focus only on tutorials, courses, books<br>✔ apply your skills and create a small project about something you love.<br><br>I&#39;d prefer seeing a small, working project than a list of certifications of course completion.</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1380581277498150917?ref_src=twsrc%5Etfw">April 9, 2021</a></blockquote> 
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Duplicated code is fine if<br><br>💡they represent different ideas/business logic<br>🐒you are not 100% sure they will always evolve in the same way<br><br>Alternatives to duplicated code?<br>👥abstract classes<br>👩‍👧‍👧generics<br>♻everything that follows the Open-Closed principle<a href="https://twitter.com/hashtag/cleancode?src=hash&amp;ref_src=twsrc%5Etfw">#cleancode</a> <a href="https://twitter.com/hashtag/codingtip?src=hash&amp;ref_src=twsrc%5Etfw">#codingtip</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1380218892992217088?ref_src=twsrc%5Etfw">April 8, 2021</a></blockquote> 
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Too many params in a method may cause trouble when merging branches🌴<br><br>Master:<br>FilterItems();<br><br>BranchA:<br>FilterItems(bool onlyPublished)<br><br>BranchB:<br>FilterItems(bool onlyPastEvents)<br><br>Now, you open 2 PRs: <br>BranchA-&gt;Master<br>BranchB-&gt;Master<br><br>Use objects instead!<a href="https://twitter.com/hashtag/cleancode?src=hash&amp;ref_src=twsrc%5Etfw">#cleancode</a> <a href="https://twitter.com/hashtag/codingtips?src=hash&amp;ref_src=twsrc%5Etfw">#codingtips</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1379856498814287876?ref_src=twsrc%5Etfw">April 7, 2021</a></blockquote> 
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">«You must learn Design Patterns because &quot;it&#39;s the tradition&quot;, but they are useless!»<br><br>Are they?<br><br>They help you with:<br><br>✨Solutions to common problems already solved<br><br>📖Shared vocabulary<br><br>💡Easier-to-understand intentions<a href="https://twitter.com/hashtag/programming?src=hash&amp;ref_src=twsrc%5Etfw">#programming</a> <a href="https://twitter.com/hashtag/cleancode?src=hash&amp;ref_src=twsrc%5Etfw">#cleancode</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1379494115478396930?ref_src=twsrc%5Etfw">April 6, 2021</a></blockquote> 
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">So you can&#39;t focus on your job? 🎯<br><br>It&#39;s normal. <br><br>Those tricks worked for me:<br><br>📴 Keep your smartphone away (even in another room)<br><br>💬 Disconnect your social accounts on the work pc<br><br>🍅Use Pomodoro Timer to force you to focus AND have breaks.<a href="https://twitter.com/hashtag/CodeNewbies?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbies</a> <br>something else?</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1379131723737358340?ref_src=twsrc%5Etfw">April 5, 2021</a></blockquote> 
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Even the most experienced devs don&#39;t know everything.<br><br>📚There is so much to learn, and it&#39;s impossible to keep up with everything.<br><br>🗣Don&#39;t be ashamed to say «I don&#39;t know». If you don&#39;t know it, learn it (and maybe share it with others).<br><br>Keep improving every day💪<a href="https://twitter.com/hashtag/CodeNewbie?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbie</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1378044559742091275?ref_src=twsrc%5Etfw">April 2, 2021</a></blockquote> 
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">🎰 The hard truth is that software development is unpredictable.<br><br>Maybe a task looks trivial, but then you find out that the specs are not clear, or a library doesn&#39;t work as expected.<br><br>⏳So, don&#39;t estimate «3 days». Go for «2-5 days».<br><br>Leave some margin of time💡<a href="https://twitter.com/hashtag/CodeNewbies?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbies</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1377682172677480451?ref_src=twsrc%5Etfw">April 1, 2021</a></blockquote> 
-
+ 
 ## Marzo 2021
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Comments are the Evil 😈<br>Are they?<br>Sometimes. But there are cases when they&#39;re useful/necessary:<br><br>🎯 show intentions (what&#39;s the meaning of a regex?)<br>📝 TODO placeholder<br> 🔎explain choices (why that default value?)<br>🖌highlight a portion of code<a href="https://twitter.com/hashtag/cleancode?src=hash&amp;ref_src=twsrc%5Etfw">#cleancode</a><a href="https://twitter.com/hashtag/programming?src=hash&amp;ref_src=twsrc%5Etfw">#programming</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1377319787995394048?ref_src=twsrc%5Etfw">March 31, 2021</a></blockquote> 
