--- a/docs/tweets-2021-05.md
+++ b/docs/tweets-2021-05.md
@@ -1,4 +1,9 @@
 
+# Maggio 2021
+
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Someone just gave you 200$ to spend on something related to your job 🤑<br><br>What should you buy first?<br><br>⚪ a cool mechanical keyboard<br>⚪ an online course<br>🔘 a comfortable chair<br>⚪ some fancy gizmo<br><br>Health must be your #1 priority! 🏋️‍♂️<br><br>Health &gt; knowledge &gt;&gt; gizmos<a href="https://twitter.com/hashtag/devtip?src=hash&amp;ref_src=twsrc%5Etfw">#devtip</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1398338279636754433?ref_src=twsrc%5Etfw">May 28, 2021</a></blockquote>  
+
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">How to improve as a developer? 🚀<br><br>Work with more experienced developers to<br><br>- have pair programming sessions<br>- have your code reviewed <br>- receive honest feedback and find your weak spots<br><br>I feel unlucky because I usually work alone, so no one reviews my code.<a href="https://twitter.com/hashtag/devtip?src=hash&amp;ref_src=twsrc%5Etfw">#devtip</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1397975901015400450?ref_src=twsrc%5Etfw">May 27, 2021</a></blockquote> 
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Code coverage metric ensures that there are no bugs? 🐛<br>False!<br><br>It helps find which methods or classes are not being tested, but nothing more. 🧪<br><br>The quality of tests depends on the meaning of the tests, not the quantity of code covered by them. 📊<a href="https://twitter.com/hashtag/devtip?src=hash&amp;ref_src=twsrc%5Etfw">#devtip</a> <a href="https://twitter.com/hashtag/tests?src=hash&amp;ref_src=twsrc%5Etfw">#tests</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1397613504455192582?ref_src=twsrc%5Etfw">May 26, 2021</a></blockquote> 
