--- a/docs/tweets-2021-05.md
+++ b/docs/tweets-2021-05.md
@@ -1,6 +1,7 @@
 
 # Maggio 2021
 
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Do you REALLY need design patterns?<br><br>Avoid them if<br>🔹 the problem is trivial<br>🔹 you use them bc &quot;everyone does&quot;<br>🔹 you don&#39;t understand pros and cons<br>🔹 you don&#39;t know which one fits best your case<br><br>Design patterns are just a tool, not the silver bullet to every problem!<a href="https://twitter.com/hashtag/devtip?src=hash&amp;ref_src=twsrc%5Etfw">#devtip</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1399425445989425159?ref_src=twsrc%5Etfw">May 31, 2021</a></blockquote> 
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Someone just gave you 200$ to spend on something related to your job 🤑<br><br>What should you buy first?<br><br>⚪ a cool mechanical keyboard<br>⚪ an online course<br>🔘 a comfortable chair<br>⚪ some fancy gizmo<br><br>Health must be your #1 priority! 🏋️‍♂️<br><br>Health &gt; knowledge &gt;&gt; gizmos<a href="https://twitter.com/hashtag/devtip?src=hash&amp;ref_src=twsrc%5Etfw">#devtip</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1398338279636754433?ref_src=twsrc%5Etfw">May 28, 2021</a></blockquote>  
 
