--- a/docs/tweets-2021-06.md
+++ b/docs/tweets-2021-06.md
@@ -1,5 +1,23 @@
 # Giugno 2021
 
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">How to grow as a dev? <br>Build stuff! 🛠⚙<br><br>A good cycle is<br><br>1 Learn <br>2 Build <br>3 Analyze outcome 👈<br>4 Discuss<br>5 Repeat<br><br>Focus on analyzing the outcome:<br> <br>😎 what you&#39;ve done well <br>😩 what went wrong<br>🤩 what&#39;s the next step (improve current skills or learn new stuff?) <a href="https://twitter.com/hashtag/CodeNewbies?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbies</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1410297081021878272?ref_src=twsrc%5Etfw">June 30, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">How to grow as a dev? <br>Build stuff! 🛠⚙<br><br>A good cycle is<br><br>1 Learn <br>2 Build 👈<br>3 Analyze outcome<br>4 Discuss<br>5 Repeat<br><br>Build just a trivial application.<br>About what?<br><br>🔸 your passion<br>🔸 something for your family<br>🔸 something for your city<br><br>In the end, something useful.<a href="https://twitter.com/hashtag/CodeNewbies?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbies</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1409934690593689600?ref_src=twsrc%5Etfw">June 29, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">How to grow as a dev? <br>Build stuff! 🛠⚙<br><br>A good cycle is<br><br>1️⃣ Learn 👈<br>2️⃣ Build<br>3️⃣ Analyze outcome<br>4️⃣ Discuss<br>🔂Repeat<br><br>You can&#39;t start without knowing the basics, so always start from it!<br>Begin with<br>📚Docs<br>📃Blogs<br>📺Tutorials<br><br>But then apply that skills!<a href="https://twitter.com/hashtag/CodeNewbies?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbies</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1409572303847890945?ref_src=twsrc%5Etfw">June 28, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Are you preparing a talk in English?<br><br>Here&#39;s a nice tool you can use: Presenter Coach, available in PowerPoint 🤩<br><br>You record your talk and the virtual coach shows you a report with tips about: <br><br>🚅 Better pace<br>🤬 Fewer profanities<br>👥 Inclusive language<a href="https://t.co/gP4xr6H711">https://t.co/gP4xr6H711</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1408485147045892096?ref_src=twsrc%5Etfw">June 25, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Performance 🆚 Clean code?<br>What to choose?<br><br>IMO, Clean Code 🧼<br>Say that your app has a bug: Clean Code helps you fix it in no time, bringing value to the users<br><br>An app with a 🔝 memory usage makes the user save some milliseconds<br><br>They won&#39;t notice it.<br>But they&#39;ll notice the bug.</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1408122758777692179?ref_src=twsrc%5Etfw">June 24, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Code Review should not focus on your coding style 👩‍💻<br><br>But you should look at code conventions like<br><br>🔸 use the client name in the namespace<br>🔸 use consistent names (eg: if you used &quot;Video&quot; across the project, avoid using &quot;Clip&quot; as a synonym)<br><br>Consistency matters 🎞</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1407760364067078146?ref_src=twsrc%5Etfw">June 23, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">YOU can make the difference in the IT world 💪<br><br>How?<br>❌ create a new OS ❌programming paradigm.<br><br>But you can:<br>🏗 Build a tool to help devs<br>🎱 Write a library to solve common problems<br>🎓 Help new folks with kick starting their carreer.<br><br>You are not Linus Torvalds. You are YOU 💪</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1407397976415227910?ref_src=twsrc%5Etfw">June 22, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Web API == REST API? 👨‍🏫<br><br>🎯 REST API: resource oriented, uses HTTP Verbs to perform operations. <br><br>🕸 Web API: any kind of API that communicates via Web. SOAP and WebHooks are considered Web API <br><br>so<br>Web API != REST API<br><br>or, better<br><br>REST API are Web API <a href="https://t.co/SNnRLaMkW6">pic.twitter.com/SNnRLaMkW6</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1407035593025114118?ref_src=twsrc%5Etfw">June 21, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">What&#39;s the best trait for good programmers?<br><br>Their mindset 💭<br><br>If you master one language, you&#39;ll have hard times moving to a different languate.<br><br>If you have a good mindset, you&#39;ll be able to recognize similar patterns and structures, and approach problems easily.<br><br>👨‍🏫</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1405948430141251591?ref_src=twsrc%5Etfw">June 18, 2021</a></blockquote>
+
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/cleancode?src=hash&amp;ref_src=twsrc%5Etfw">#cleancode</a> does not always mean shorter code<br><br>These <a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a> snippets do the same things, but one is shorter, and the other is cleaner.<br><br>The second snippet allows you to focus on the execution flows rather than on the details of each call.<br><br>Aim to clarity! <a href="https://t.co/XZY2RXp4II">pic.twitter.com/XZY2RXp4II</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1405586037657661442?ref_src=twsrc%5Etfw">June 17, 2021</a></blockquote> 
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Everyone says that «you must stay humble». 🙏<br><br>What does it mean!<br><br>❌ don&#39;t think that everyone is better than you<br>❌don&#39;t think that you are better than everyone else<br>✔ Recognize that you have not the absolute truth, but that even ppl with less experience than you may be right</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1405223656180039682?ref_src=twsrc%5Etfw">June 16, 2021</a></blockquote> 
