Aggiunti link luglio

--- a/docs/tweets-2021-07.md
+++ b/docs/tweets-2021-07.md
@@ -1,4 +1,34 @@
 # Luglio 2021
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Your application context influences your naming strategy👨‍🏫<br> <br>If you are managing physical factories, you should not create a FactoryFactory class: find a synonym to avoid misinterpretation.<br><br>Maybe PlantFactory? Or FactoryBuilder?<br><br>Writing clean code is not always easy!</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1420806326507216906?ref_src=twsrc%5Etfw">July 29, 2021</a></blockquote> 
+
+ <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Unit Tests are useful, but cannot cover everything. You also need other kinds of tests.<br><br>Something that <a href="https://twitter.com/hashtag/unittests?src=hash&amp;ref_src=twsrc%5Etfw">#unittests</a> cannot cover:<br><br>* external data format (you expect &quot;ITA&quot; but receive &quot;italy&quot;)<br>* dependency injection registration<br>* I/O operations on filesystem<br><br>Anything else?</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1420443946040184835?ref_src=twsrc%5Etfw">July 28, 2021</a></blockquote> 
+
+
+ <blockquote class="twitter-tweet"><p lang="en" dir="ltr">&quot;When writing new code, tests should always pass&quot;<br><br>False❌<br><br>When refactoring the internal code, tests should always pass<br><br>When adding new behaviors, tests should fail<br><br>If no tests fail, it means that the tests had not a single reason to exist (they test multiple behaviors)</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1420081552663498754?ref_src=twsrc%5Etfw">July 27, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Tests that fail randomly indicate that your code has some dangerous dependencies.<br><br>To write great <a href="https://twitter.com/hashtag/unittests?src=hash&amp;ref_src=twsrc%5Etfw">#unittests</a>, extract stuff like<br>📅 current date<br>🎰 random numbers<br>🏷 Guid generators<br><br>to an external service.<br><br>You&#39;ll be able to mock them and write tests for specific values</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1419719666566582275?ref_src=twsrc%5Etfw">July 26, 2021</a></blockquote> 
+
+
+ <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/unittests?src=hash&amp;ref_src=twsrc%5Etfw">#unittests</a> are about the functionalities of a program, not about the technical details<br><br>Write tests thinking of the use cases and not the implementations, so that you can easily change the impl w/o affecting the meaning of a function 😎<br><br>Nested if? Switch? Regex? Who cares!</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1418632007576289281?ref_src=twsrc%5Etfw">July 23, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/TDD?src=hash&amp;ref_src=twsrc%5Etfw">#TDD</a> is not the silver bullet!<br><br>Especially when discovering ext libraries<br><br>Yes, with TDD you can run exploratory tests to understand the behavior, but not the actual content.<br>How would you know how to map ext complex objects with your models, if not debugging?</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1418269618590736385?ref_src=twsrc%5Etfw">July 22, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">3 ways to improve as a dev:<br><br>🏃‍♂️ get out of your comfort zone<br>🛣 explore different approaches to the same fields<br>👯‍♂️ compare yourself to your past self - not to someone else<br><br>&quot;no pain, no gain&quot;, right?<br><br>Ok, but how?<br>• discuss with colleagues<br>• read/watch courses</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1417907727313948676?ref_src=twsrc%5Etfw">July 21, 2021</a></blockquote> 
+
+ <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Did you know that you can create case insensitive Dictionaries with <a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a> by using a constructor overload?<br><br>Try adding a <br>System.StringComparer to the dictionary constructor.<br><br>In this way, you can ignore the casing of the keys.<br><br>dict[&quot;myKEY&quot;] will be equivalent to dict[&quot;MYkeY&quot;] <a href="https://t.co/CgjBxjiCbb">pic.twitter.com/CgjBxjiCbb</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1417544839349080064?ref_src=twsrc%5Etfw">July 20, 2021</a></blockquote> 
+
+ <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Using the right operators helps writing better code.<br><br>An example is the XOR operator. In <a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a>, it&#39;s defined by the ^ symbol.<br><br>❌ (A &amp;&amp; !B) || (!A &amp;&amp; B)<br>✅ A ^ B<br><br>Can you give me an example of when you used it?<a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a> <a href="https://twitter.com/hashtag/dotnet?src=hash&amp;ref_src=twsrc%5Etfw">#dotnet</a> <a href="https://twitter.com/hashtag/CodeNewbie?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbie</a> <a href="https://t.co/Thj3SwuoOa">pic.twitter.com/Thj3SwuoOa</a></p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1417182453412745216?ref_src=twsrc%5Etfw">July 19, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Wanna start <a href="https://twitter.com/hashtag/blogging?src=hash&amp;ref_src=twsrc%5Etfw">#blogging</a>? 📑<br>Before beginning, you should choose:<br><br>-reason<br>-topics<br>-platform<br>-audience<br>-pace👈<br><br>Post regularly!<br>Readers want to know when a new article will be out.<br><br>Also, choosing a pace &quot;forces&quot; you to keep going and motivates you.<br><br>-at least, that works for me!</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1416095284787130375?ref_src=twsrc%5Etfw">July 16, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Wanna start <a href="https://twitter.com/hashtag/blogging?src=hash&amp;ref_src=twsrc%5Etfw">#blogging</a>? 📑<br>Before beginning, you should choose:<br><br>-reason<br>-topics<br>-platform<br>-audience👈<br>-pace<br><br>Choosing the audience impacts the content and language you use.<a href="https://twitter.com/hashtag/CodeNewbies?src=hash&amp;ref_src=twsrc%5Etfw">#CodeNewbies</a> have different interests than experts in the field, so you should adapt the type of content.</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1415732897856753672?ref_src=twsrc%5Etfw">July 15, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Wanna start <a href="https://twitter.com/hashtag/blogging?src=hash&amp;ref_src=twsrc%5Etfw">#blogging</a>? 📑<br>Before beginning, you should choose:<br><br>-reason<br>-topics<br>-platform👈<br>-audience<br>-pace<br><br>You don&#39;t need to build your blog from zero!<br><br>There are free alternatives, like<br>🔗WordPress<br>🔗Dev[.]to/Hashnode<br>🔗GitHub pages<br><br>It&#39;s ok to begin here and move away later!</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1415370514646933504?ref_src=twsrc%5Etfw">July 14, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Wanna start <a href="https://twitter.com/hashtag/blogging?src=hash&amp;ref_src=twsrc%5Etfw">#blogging</a>? 📑<br>Before beginning, you should choose:<br><br>-reason<br>-topics👈<br>-platform <br>-audience<br>-pace<br><br>Avoid mixing unrelated content, like coding, cooking, movies.<br>People want to know what kind of content to expect.<br>Focus on a topic, and be the polar star for the readers.</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1415008123962679298?ref_src=twsrc%5Etfw">July 13, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Wanna start <a href="https://twitter.com/hashtag/blogging?src=hash&amp;ref_src=twsrc%5Etfw">#blogging</a>? 📑<br>Before beginning, you should choose:<br><br>-reason 👈<br>-topics<br>-platform <br>-audience<br>-pace<br><br>Why you wanna start a blog?<br>Money? Sharing learnings? Create a community?<br><br>This choice influences your headlines and articles structure.<br>Clear headlines or clickbait?</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1414645732951269381?ref_src=twsrc%5Etfw">July 12, 2021</a></blockquote> 
+
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a> sucks! 💩<br><br>Does it?<br><br>With <a href="https://twitter.com/hashtag/csharp?src=hash&amp;ref_src=twsrc%5Etfw">#csharp</a> you can create<br><br>⚡ Web API (REST, <a href="https://twitter.com/hashtag/GraphQL?src=hash&amp;ref_src=twsrc%5Etfw">#GraphQL</a>, more)<br>🖼 Frontend sites (<a href="https://twitter.com/hashtag/Blazor?src=hash&amp;ref_src=twsrc%5Etfw">#Blazor</a>)<br>🎮 Videogames<br>⛓ <a href="https://twitter.com/hashtag/machinelearning?src=hash&amp;ref_src=twsrc%5Etfw">#machinelearning</a> models (<a href="https://t.co/SCoERd0ZKf">https://t.co/SCoERd0ZKf</a>)<br>💻 Desktop Apps<br>and more!<a href="https://twitter.com/hashtag/dotnet?src=hash&amp;ref_src=twsrc%5Etfw">#dotnet</a> is definitely underrated.<br><br>You should give it a try!</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1413558570013102082?ref_src=twsrc%5Etfw">July 9, 2021</a></blockquote>
 
