--- a/docs/tweets-2021-07.md
+++ b/docs/tweets-2021-07.md
@@ -1,4 +1,7 @@
 # Luglio 2021
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Even choosing a slightly different variable name can improve your code: think of `usersList` vs `users` vs `usersCollection`. <br><br>• `usersList` implies that the data structure is a list<br><br>• `users` is just generic, and often is fine<br><br>• `usersCollection` is redundant</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1421168721263939584?ref_src=twsrc%5Etfw">July 30, 2021</a></blockquote>  
+
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Your application context influences your naming strategy👨‍🏫<br> <br>If you are managing physical factories, you should not create a FactoryFactory class: find a synonym to avoid misinterpretation.<br><br>Maybe PlantFactory? Or FactoryBuilder?<br><br>Writing clean code is not always easy!</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1420806326507216906?ref_src=twsrc%5Etfw">July 29, 2021</a></blockquote> 
 
  <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Unit Tests are useful, but cannot cover everything. You also need other kinds of tests.<br><br>Something that <a href="https://twitter.com/hashtag/unittests?src=hash&amp;ref_src=twsrc%5Etfw">#unittests</a> cannot cover:<br><br>* external data format (you expect &quot;ITA&quot; but receive &quot;italy&quot;)<br>* dependency injection registration<br>* I/O operations on filesystem<br><br>Anything else?</p>&mdash; Davide Bellone 🐧 - 𝗰𝗼𝗱𝗲𝟰𝗶𝘁.𝗱𝗲𝘃 📃📃 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1420443946040184835?ref_src=twsrc%5Etfw">July 28, 2021</a></blockquote> 
