--- a/docs/2021-09.md
+++ b/docs/2021-09.md
@@ -1,5 +1,19 @@
 # Settembre 2021
 
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">⭐ Unit tests should focus on behaviors, not on single methods.<br><br>Eg: a wrapper around the cache layer with 2 operations: Save and Get. <br><br>You can mock the cache layer and test that, when calling Set and then Get, the returned value is the same you saved.<br><br>2 methods, 1 behavior 👨‍🏫</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1443636770135023618?ref_src=twsrc%5Etfw">September 30, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">New task? Don&#39;t jump to the code 🦘<br><br>Take some time to <br><br>* understand the problem <br>* gather requirements<br>* understand corner cases<br>* list dependencies<br><br>Where for dependencies I mean both technical (&quot;I have to use that API&quot;) and non-technical (&quot;I need task X to be completed&quot;)</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1443455568237187072?ref_src=twsrc%5Etfw">September 30, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">How I get the best ideas to solve programming issues:<br><br>⚪ focusing hours on the same issue<br>⚪ long debugging sessions<br>🔘 brushing my teeth<br><br>Just a short break can do more than hours focued on the same problem. <br><br>Our brain is amazing (and quite odd, after all!)🧠</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1443274375159898112?ref_src=twsrc%5Etfw">September 29, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">You have to hire a new dev.<br><br>Candidate 🅰<br>✅ Knows all the details of the latest version of the framework you&#39;re using<br>❌ bad mindset <br><br>Candidate 🅱<br>❌ Stuck to an old version of the framework<br>✅ good mindset<br><br>Who would you hire? I&#39;d go with 🅱: Good mindset &gt; top tech skills</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1442911992411471872?ref_src=twsrc%5Etfw">September 28, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Remember, comments should be written only if they are useful.<br><br>Like what?<br><br>🔸 Explain WHY, not HOW<br>🔹 Specify links to docs or StackOverflow question<br>🔸 Show examples of data formats (Language is &quot;enGB&quot;, not &quot;en-GB&quot;)<br><br>Any other examples? <a href="https://t.co/utG56UUoQV">pic.twitter.com/utG56UUoQV</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1442549599428743170?ref_src=twsrc%5Etfw">September 27, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">🧼 Clean code tip<br>🧼 Use coherent params order<br><br>If you have a set of related functions that all accept the same arguments, list them always in the same order<br><br>This makes your code easier to follow.<br><br>(tip: many IDEs allow you to change the params order!) <a href="https://t.co/QzDfYfsd3N">pic.twitter.com/QzDfYfsd3N</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1441462443364864006?ref_src=twsrc%5Etfw">September 24, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Naming things is hard!<br><br>Not just for variables and class names.<br><br>Give the right names to<br><br>📁 folders<br>📦 modules<br>📈 metrics<br>📓 docs<br>📊 diagrams</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1441100055121911825?ref_src=twsrc%5Etfw">September 23, 2021</a></blockquote> 
+
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">If you&#39;re asked to work on something you&#39;ve never seen, choose wisely the right approach:<br><br>🔸 No, I&#39;m not able to do that<br>🔹 Ok, but it will take some time to learn that stuff<br><br>No answer is wrong. It depends on many factors, like:<br>- learning curve<br>- schedules<br>- team structure</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1440737662923460608?ref_src=twsrc%5Etfw">September 22, 2021</a></blockquote> 
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">An interview should be a conversation, not an inquiry. <br><br>Your interviewers will ask questions, of course. But you should ask some questions too!<br><br>This will <br>🔸 show interest in their company<br>🔸 boost empathy<br>🔸 help you understanding if the company is meeting your expectations.</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1440375277570256910?ref_src=twsrc%5Etfw">September 21, 2021</a></blockquote> 
