Added november + december

--- a/docs/2021-11.md
+++ b/docs/2021-11.md
@@ -1,8 +1,61 @@
 
 
+# Novembre 2021
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Graphs, in short:<br><br>📦 Nodes: me and you<br>🖇 Edge: our connection<br><br>↗ Directed graph: when edges have a direction: (I follow you on Twitter)<br><br>↕ Indirect graph: when edges can be followed in both directions (we are friends on Facebook)</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1465757819253231622?ref_src=twsrc%5Etfw">November 30, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Choosing the correct tech is key for a crucial project🔑<br><br>Don&#39;t stick to the tools you know.<br><br>Choose what you need! 🧰<br><br>Eg: don&#39;t force a relational DB to act as a graph DB. Use a graph DB instead!</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1465395169616932865?ref_src=twsrc%5Etfw">November 29, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Hey, guess what?<br><br>Complex passwords like <br><br>x1KEi!|lkeo£8<br><br>are actually weaker than<br><br>AladdinTableclothTomato <a href="https://t.co/uqZcRVIzha">pic.twitter.com/uqZcRVIzha</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1465249926670082051?ref_src=twsrc%5Etfw">November 29, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Ternary operator or if/else?<br><br>How do you choose which approach to use? <a href="https://t.co/mujzSaslmF">pic.twitter.com/mujzSaslmF</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1464988454392057865?ref_src=twsrc%5Etfw">November 28, 2021</a></blockquote> 
 
 
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">«Good architecture makes the system easy to understand, develop, maintain, and deploy»<br><br>Even from a high-level perspective you should be able to understand what&#39;s the purpose of your system<br><br>An e-commerce site has a different architecture than a social network🏠</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1464307809345024000?ref_src=twsrc%5Etfw">November 26, 2021</a></blockquote> 
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Error messages should be clear and help devs understand the reason and the location of the error.<br><br>Avoid &quot;An error occurred&quot;. Explain why. Return a specific error code. Describe that error code in your documentation. <a href="https://t.co/iMzHjGovbT">pic.twitter.com/iMzHjGovbT</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1455610922878312455?ref_src=twsrc%5Etfw">November 2, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Relax time is just as important as focus time 🛌<br><br>You can&#39;t be always focused<br><br>Take your time. Relax your mind. Get rid of stress.<br><br>Only then, get back to work 💪</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1455248403827408908?ref_src=twsrc%5Etfw">November 1, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">As in photography, to reach a goal in programming there&#39;s a rule: 3P<br><br>🅿atience<br>🅿erseverance<br>🅿assion<br><br>It&#39;s as simple as this! 🔑</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1463974146245804037?ref_src=twsrc%5Etfw">November 25, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">One of my weaknesses when working as a backend developer?<br><br>Ignoring the frontend part 👺<br><br>I often reason about the tasks considering only the backend part, forgetting that my part is just half of the job: that&#39;s a terrible approach!<br><br>Our code exists for a reason: being used🤠</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1461409515266469889?ref_src=twsrc%5Etfw">November 18, 2021</a></blockquote> 
+
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Always commit working code!<br><br>Even if you&#39;re working on a separate GIT branch, don&#39;t commit code that doesn&#39;t compile.<br><br> Say that you&#39;re working on a branch, and the code does not compile. And that you have to switch branch.<br><br>How to keep your work?<br><br>❌ GIT COMMIT<br>✅ GIT STASH</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1461046824597434374?ref_src=twsrc%5Etfw">November 17, 2021</a></blockquote> 
+
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">As a photographer, you can choose file format: RAW (heavier, easier to edit) or JPEG (easier to quickly share your images) 📷<br><br>Similarly, as a developer, there&#39;s no choice that fits all your needs<br><br>SQL or NoSQL?<br>Microservice or Monolith?<br><br>🚫 Cargo Culture<br>🧠 Focus on your needs</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1460321590680432652?ref_src=twsrc%5Etfw">November 15, 2021</a></blockquote> 
+
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Clean code tip🧽<br><br>🤏Reduce the number of used namespaces in a class.<br><br>If your class imports tens namespaces, it means that it is doing too many things at once.<br><br>Excluding the most common ones (in .NET, System.Linq, System.Collections...), of course! <a href="https://t.co/FHZJCxfb0p">pic.twitter.com/FHZJCxfb0p</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1459236098857701381?ref_src=twsrc%5Etfw">November 12, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Clean code tip🧽<br><br>🤏Reduce the number of used namespaces in a class.<br><br>If your class imports tens namespaces, it means that it is doing too many things at once.<br><br>Excluding the most common ones (in .NET, System.Linq, System.Collections...), of course! <a href="https://t.co/FHZJCxfb0p">pic.twitter.com/FHZJCxfb0p</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1459236098857701381?ref_src=twsrc%5Etfw">November 12, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">How to decide if you should build the side project you have in mind?<br> <br>🔸 will you have fun building it?<br>🔸 will you learn something from it?<br>🔸 is it useful?<br>🔸 will you earn something from it (popularity, money...)<br><br>If you have a side project, answer those questions here!</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1459029130457104386?ref_src=twsrc%5Etfw">November 12, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Please, read the documentation! 📃<br><br>Why?<br><br>- you don&#39;t waste time coding by trial and error<br>- you can follow the best practices (if any)<br>- you can learn by who has created the stuff you&#39;re using<br><br>(the opposite is valid too: write docs to avoid other devs the same issues) <a href="https://t.co/PFR2WmABMn">pic.twitter.com/PFR2WmABMn</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1458872364184346629?ref_src=twsrc%5Etfw">November 11, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">🔬 Microservices are useful when the team gets bigger, not when the users grow. <br><br>You can scale a monolith.<br><br>But what if the team size grows, and managing the code becomes harder?</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1458666942038953986?ref_src=twsrc%5Etfw">November 11, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Code reviews SHOULD be a core part of the development process.<br><br>- Is the code easy to read?<br>- Is it easy to update and extend?<br>- Are the tests meaningful?<br><br>Yes, with code reviews, you spend more time before completing a task. But you save A LOT more for your next tasks.</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1458510327528689673?ref_src=twsrc%5Etfw">November 10, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Clean code tip🧽<br><br>Extract things you cannot directly control:<br><br>- DB Access<br>- File System<br>- Current Date<br>- Random Ids<br><br>This helps with testability and readability.<br><br>What are the other things you&#39;d extract?</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1458147350787018754?ref_src=twsrc%5Etfw">November 9, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">If the same bug appears twice, you&#39;ve not solved it 🐛 <br><br>Understand what causes the bug - not just the effects, but the root causes!<br> <br>Cover the case with some tests.<br><br>Run those tests often.</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1457972322845986816?ref_src=twsrc%5Etfw">November 9, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Monolith == Big bull of muds?<br><br>No ❌<br><br>At least, not if you spend some time organizing your project in the right way.<br><br>For instance, use the Ports+Adapter idea to move the abstract external dependencies out of your &quot;core&quot; code.<br><br>- external APIs<br>- DB<br>- File System<br><br>and more!</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1457784876258631688?ref_src=twsrc%5Etfw">November 8, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">4 best practices to create extensible projects 🚀 <br><br>1️⃣ Separate concerns<br>2️⃣ Create small, well-focused components<br>3️⃣ Don&#39;t mix DTOs and Business logic in the same class<br>4️⃣ Extract stuff you cannot control (current date, GUIDs...) to separate interfaces<br><br>Anything else?</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1456698216221642762?ref_src=twsrc%5Etfw">November 5, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Two of the most frustrating things for developers:<br><br>«It&#39;s not working and I don&#39;t know why»<br>and<br>«It&#39;s working, and I don&#39;t know why» <a href="https://t.co/GdciTrpQDD">pic.twitter.com/GdciTrpQDD</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1456610751112679428?ref_src=twsrc%5Etfw">November 5, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Applications often scale. Up or Out?<br><br>✨ Scale up vs Scale out ✨<br><br>↕ Scale up<br>add more resources to the same application (eg: add more CPU)<br><br>↔Scale out <br>add more applications that handle part of the traffic (eg: add another server)</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1456336064218554368?ref_src=twsrc%5Etfw">November 4, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">So many friends think that coding is hard.<br><br>That&#39;s not true!<br><br>CODING is easy.<br><br>CODING WELL is hard<br><br>👩‍💻</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1456129901757714432?ref_src=twsrc%5Etfw">November 4, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">In C#, there&#39;s a special keyword that can drastically boost your performance:<br><br>✨ yield return ✨<br><br>It allows you to use an IEnumerable by returning one item at a time.<br><br> So, instead of building a list with 1000 items, you return a single item 1000 times.<br><br>Ever used that keyword? <a href="https://t.co/ETJDupXMT9">pic.twitter.com/ETJDupXMT9</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1455973842762010630?ref_src=twsrc%5Etfw">November 3, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Error messages should be clear and help devs understand the reason and the location of the error.<br><br>Avoid &quot;An error occurred&quot;. Explain why. Return a specific error code. Describe that error code in your documentation. <a href="https://t.co/iMzHjGovbT">pic.twitter.com/iMzHjGovbT</a></p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1455610922878312455?ref_src=twsrc%5Etfw">November 2, 2021</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Relax time is just as important as focus time 🛌<br><br>You can&#39;t be always focused<br><br>Take your time. Relax your mind. Get rid of stress.<br><br>Only then, get back to work 💪</p>&mdash; Davide Bellone 🌊 🗡 (@BelloneDavide) <a href="https://twitter.com/BelloneDavide/status/1455248403827408908?ref_src=twsrc%5Etfw">November 1, 2021</a></blockquote>  
+
+
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
